source/styles/main.scss
/**
*   ~~~ 0. NORMALIZE ~~~
*
* In order to remove browser inconsistencies, we use normalise.scss which is a
* port of normalize.css.
*/

/* variables for normalize.scss */
$base-font-size: 18px; /* slightly larger fonts */
$base-line-height: 30px;
$base-unit: rem;
$base-font-family: "Open Sans", Verdana, "Helvetia Neue", Helvetia, Arial, sans-serif;
$h1-font-size: 3    * $base-font-size;
$h2-font-size: 2  * $base-font-size;
$h3-font-size: 1.5 * $base-font-size;
$h4-font-size: 1.17    * $base-font-size;
$h5-font-size: 1 * $base-font-size;
$h6-font-size: .83 * $base-font-size;
$indent-amount: 2rem;
$normalize-vertical-rhythm: true;

@import "../../bower_components/normalize-scss/sass/_normalize";
@include normalize();


/**
*   ~~~ 1. VARIABLES & MIXINS ~~~
*/
$scheppers-blauw: #2a6bb0;
$scheppers-blauw-wit: #dce6f2; // last step of 5 steps to white
$scheppers-blauw-wit--trans: rgba(220, 230, 242, .7);
$accent-color: #ffed42;
$accent-color--soft: #fff381; // 2nd step of 5 steps to white
$scheppers-geel-wit: #fffcdf; // last step of 5 steps to white
$text-color-black: rgba(0,0,0,.87);
$text-color-white: rgba(255,255,255,.95);

@mixin rounded()
{
    border-radius: 2px;
}

/// Gives a material depth effect.
/// @param {Number} $depth - depth level (between 1 and 5)
/// @link http://www.google.com/design/spec/layout/layout-principles.html#layout-principles-dimensionality Google Design
/// @requires {function} top-shadow
/// @requires {function} bottom-shadow
@mixin shadow($depth)
{
    @if $depth < 1
    {
        box-shadow: none;
    } @else if $depth > 5
    {
        @warn "Invalid $depth `#{$depth}` for mixin `card`.";
    } @else
    {
        box-shadow: bottom-shadow($depth), top-shadow($depth);
    }
}
/// Computes a top-shadow for a card effect.
/// @param {Number} $depth - depth level
/// @return {List}
@function top-shadow($depth)
{
    $primary-offset: nth(1.5 3 10 14 19, $depth) * 1px;
    $blur: nth(1.5 3 10 14 19, $depth) * 4px;
    $color: rgba(black, nth(.12 .16 .19 .25 .30, $depth));

    @return 0 $primary-offset $blur $color;
}
/// Computes a bottom-shadow for a card effect.
/// @param {Number} $depth - depth level
/// @return {List}
@function bottom-shadow($depth)
{
    $primary-offset: nth(1.5 3 6 10 15, $depth) * 1px;
    $blur: nth(1 3 3 5 6, $depth) * 4px;
    $color: rgba(black, nth(.24 .23 .23 .22 .22, $depth));

    @return 0 $primary-offset $blur $color;
}

/**
*   ~~~ 2. TYPOGRAPHY ~~~
*/
h1,
h2,
h3,
h4,
h5,
h6
{
    font-weight: 300;
}
strong
{
    font-weight: 600;
}
a
{
    text-decoration: none;
}

/**
*   ~~~ 3. BASE LAYOUT ~~~
*/
html
{
    color: $text-color-black;
    background-color: $scheppers-blauw-wit;
}

/**
*   ~~~ 4. MODULES ~~~
*/

/**
*   --- 4.1 site-header ---
*/
.site-header
{
    position: fixed;
    z-index: 100;
    top: 0;

    width: 100%;
    margin: 0;
    padding: 0;

    background-color: $scheppers-blauw;

    @include shadow(1);
}
.site-header__logo
{
    float: left;

    height: 3.3333rem;
    padding: .83335rem;
}
.site-header__logo img
{
    height: 3.3333rem;
}

/**
*   --- 4.2 site-nav ---
*/

.nav-bar
{
    display: flex;

    justify-content: flex-end;
}
.nav-bar ul
{
    height: 5rem;
    margin: 0;
}
.nav-bar__item
{
    display: inline-block;

    min-width: 9rem;
}
.nav-bar__item-link
{
    display: inline-block;

    min-width: 9rem;
    height: 100%;
    padding: 1.6667rem .83335rem;

    text-align: center;

    color: $text-color-white;
}
.nav-bar__item-link--active
{
    opacity: 1;
    color: $text-color-black;
    background-color: $accent-color--soft;
}
.nav-bar--secondary
{
    height: 3.3333rem;

    opacity: 1;
    background-color: $accent-color--soft;
}
.nav-bar--secondary ul
{
    height: 3.3333rem;
}
.nav-bar--secondary .nav-bar__item-link
{
    padding: .83335rem;

    color: $text-color-black;
}

/**
*   --- 4.3 intro ---
*/
.intro
{
    position: relative;
    z-index: -10;

    width: 100%;
    width: 100vw;
    height: 100vh;
}
#id-intro__background
{
    position: fixed;
    z-index: -100;
    top: 0;
    left: 0;

    overflow: hidden;

    width: 100%;
    height: calc(100vh - 1rem);
}
.intro__background-image
{
    position: absolute;
    z-index: -90;
    top: 0;
    left: 0;

    display: block;

    min-width: 100%;
    min-height: 100vh;
}
.intro__background-curtain
{
    position: absolute;
    z-index: -90;
    top: 0;
    left: 0;

    display: block;

    min-width: 100%;
    min-height: 100vh;

    background-color: rgba(0, 0, 0, .6);
}
.intro__logo-wrapper
{
    margin: 0 auto 1.6667rem auto;
    padding: .8333rem;

    background-color: rgba(255,255,255,.8);

    @include rounded();
    @include shadow(1);
}
.intro__logo
{
    display: block;

    height: 6.6667rem;
    padding: .8333rem;

    border: .1111rem solid $scheppers-blauw;
}
.intro__content
{
    font-size: 1.6667rem;
    line-height: 1.6667rem;

    margin: 0 auto;
    padding: 1.6667rem;

    text-align: center;

    color: $text-color-white;
    border: 2px solid $text-color-white;
    background-color: rgba(0, 0, 0, .3);
}

#id-intro__text--replace
{
    display: inline-block;

    width: 5em;

    color: $accent-color;
}

/**
*   --- 4.4 container ---
*/
.container
{
    padding-bottom: 67vh;

    background-repeat: no-repeat;
    background-attachment: fixed;
    background-position: center;
    background-size: cover;
}
#id-in-het-kort
{
    background-image: url("../images/schoolkinderen.jpg");
}
#id-visie
{
    background-image: url("../images/visie.jpg");
}
#id-economie-handel
{
    background-image: url("../images/economie-handel.jpg");
}
#id-informatica
{
    background-image: url("../images/informatica.jpg");
}
#id-mode-creatie
{
    background-image: url("../images/mode-creatie.jpg");
}

/**
*   --- 4.5 page-section ---
*/
.page-section
{
    padding: 3.3334rem;

    background-color: $scheppers-blauw-wit--trans;

    @include shadow(1);
}
.page-section__content
{
    overflow: hidden;

    width: 60rem;
    max-width: 100%;
    margin: 0 auto;
    padding: 1.6667rem 0;

    background-color: $scheppers-geel-wit;

    @include rounded();
    @include shadow(1);
}
.page-section__content__header
{
    margin: 0 1.6667rem;
}
.page-section__title
{
    font-size: 2rem;
    line-height: 3.3334rem;

    margin: 0;
}
.page-section__subtitle
{
    font-size: 1.6667rem;
    line-height: 3.3334rem;

    margin: 0;
}
.page-section__content__container
{
    display: flex;

    margin: 0 -3px 0 0;

    flex-wrap: wrap;
}
.text-col
{
    box-sizing: border-box;
    padding: 0 1.6667rem;

    border-right: 2px solid $scheppers-blauw;
}
.text-col--1-1
{
    flex: 0 1 100%;
}
.text-col--1-2
{
    flex: 0 1 50%;
}
.text-col--1-3
{
    flex: 0 1 33.3334%;
}
.text-col--2-3
{
    flex: 0 1 66.6667%;
}

/**
*   4.6 page-footer
*/
.page-footer
{
    display: flex;

    color: $text-color-white;
    background-color: $scheppers-blauw;
}
.page-footer__content
{
    font-weight: 300;
    font-style: normal;

    padding: 1.6667rem;

    flex: 0 1 25%;
}
.page-footer__content a
{
    text-decoration: underline;

    color: $text-color-white;
}

/**
*   ~~~ 5. State ~~~
*/
.hidden
{
    display: none;
}

/**
*   ~~~ 6. Utility ~~~
*/
.vcenter
{
    display: flex;
    flex-direction: column;

    justify-content: center;
}

